--- a/abir/index.html
+++ b/abir/index.html
@@ -4,6 +4,6 @@
 	<title>web site</title>
 </head>
 <body>
-<h1> what is web site?<h1>
+<h1> what is web site? and how to develop it? what is the language used?<h1>
 </body>
 </html>
