--- a/abir/index.html
+++ b/abir/index.html
@@ -4,9 +4,16 @@
 	<title>zodaic sign</title>
 </head>
 <body>
-<h1> what is Lio?<h1>
-<h2> Treats</h2>
-<h3> love and relationship</h3>
-<h4> career and money</h4>
+<h1> what are Lio characters?<h1>
+	<ul>
+	personalities
+	love
+	career
+	money
+	relation ship 
+	   with family 
+	   with frainds
+	</ul>
+
 </body>
 </html>
