--- a/abir/index.html
+++ b/abir/index.html
@@ -5,15 +5,18 @@
 </head>
 <body>
 <h1> what are Lio characters?<h1>
+	<div>
 	<ul>
-	personalities
-	love
-	career
-	money
-	relation ship 
-	   with family 
-	   with frainds
+	<li>personalities</li>
+	<li>love</li>
+	<li>
+	<ul>
+	<li>relation ship</li> 
+	   <li>with family</li> 
+	  
 	</ul>
-
+	</li>
+	</ul>
+</div>
 </body>
 </html>
